# veritas

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  ISSUES.md  PIVOT.md  README.md  SECURITY.md  TECH_DEBT.md  cabal.project.freeze  ceremony-protocol.md  common-pool-computing.md  docker-compose.yml  randomness-service-design.md  veritas.cabal
app/: Main.hs
docs/: security-audit.md
src/Veritas/: Config.hs  Logging.hs
src/Veritas/API/: Auth.hs  Handlers.hs  PoolHandlers.hs  PoolTypes.hs  RateLimit.hs  Types.hs  VerificationHandlers.hs  VerificationTypes.hs
src/Veritas/Core/: AuditLog.hs  Entropy.hs  Pool.hs  Resolution.hs  StateMachine.hs  TaskAssignment.hs  Types.hs  Verification.hs  VerifiedCache.hs
src/Veritas/Crypto/: BLS.hs  CeremonyParams.hs  CommitReveal.hs  Hash.hs  Roster.hs  Signatures.hs  VRF.hs
src/Veritas/DB/: Migrations.hs  Pool.hs  PoolMigrations.hs  PoolQueries.hs  Queries.hs
src/Veritas/Pool/: Comparison.hs  Seal.hs  Selection.hs  StateMachine.hs  Types.hs
src/Veritas/Workers/: AutoResolver.hs  BeaconFetcher.hs  ExpiryChecker.hs  RevealDeadlineChecker.hs  ValidatorSelector.hs
test/: GenTestVectors.hs  Spec.hs  TestHelpers.hs
test/Integration/: AuditLogSpec.hs  CeremonyFixtures.hs  DbHelpers.hs  ErrorSpec.hs  LifecycleSpec.hs  StandaloneSpec.hs  TestEnv.hs
test/Properties/: AuditLogProperties.hs  CommitRevealProperties.hs  PoolProperties.hs  ResolutionProperties.hs  StateMachineProperties.hs  StatisticalProperties.hs
test/Veritas/API/: HandlersSpec.hs
test/Veritas/Core/: AuditLogSpec.hs  PoolSpec.hs  ResolutionSpec.hs  RevealSpec.hs  StateMachineSpec.hs  TaskAssignmentSpec.hs  VerificationFlowSpec.hs  VerificationSpec.hs  VerifiedCacheSpec.hs
test/Veritas/Crypto/: BLSSpec.hs  CeremonyParamsSpec.hs  CommitRevealSpec.hs  HashSpec.hs  RosterSpec.hs
test/Veritas/DB/: QueriesSpec.hs
test/Veritas/Pool/: ComparisonSpec.hs  SealSpec.hs  SelectionSpec.hs  StateMachineSpec.hs
test/Veritas/Workers/: BeaconFetcherSpec.hs
tools/agent-sim/: package-lock.json  package.json  tsconfig.json
tools/agent-sim/src/: agent.ts  api-client.ts  costs.ts  crypto.ts  index.ts
tools/agent-sim/src/compute/: llm.ts  simulated.ts
tools/agent-sim/src/scenarios/: disagreement.ts  happy-path.ts  real-llm.ts
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: navigation.spec.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.test.ts  client.ts  fetch.ts  poolClient.ts  poolTypes.ts  types.ts  verificationClient.ts  verificationTypes.ts
web/src/components/: AuditLog.test.tsx  AuditLog.tsx  CommitForm.tsx  CopyLinkButton.tsx  JoinForm.tsx  Layout.tsx  OutcomeDisplay.test.tsx  OutcomeDisplay.tsx  PhaseIndicator.test.tsx  PhaseIndicator.tsx  RevealForm.tsx  RosterAckForm.tsx  SigningInstructions.tsx  VerificationData.test.tsx  VerificationData.tsx
web/src/components/pool/: AgentCard.tsx  CostComparisonCard.tsx  CryptoDetailPanel.tsx  PoolPhaseIndicator.tsx
web/src/components/verification/: CeremonyInput.tsx  RunnableCodeBlock.tsx  StepResult.tsx  auditLogParsing.ts  codeStrings.ts  executeStep.ts  highlight.ts
web/src/components/verification/__tests__/: RunnableCodeBlock.test.tsx  codeStrings.test.ts
web/src/components/verification/steps/: FetchDataStep.tsx  UtilitiesSection.tsx  VerifyBeaconStep.tsx  VerifyCommitRevealStep.tsx  VerifyEntropyStep.tsx  VerifyIdentityStep.tsx  VerifyOutcomeStep.tsx  VerifyParamsHashStep.tsx
web/src/context/: ParticipantContext.tsx
web/src/crypto/: ceremonyParams.test.ts  ceremonyParams.ts  entropy.test.ts  entropy.ts  identity.test.ts  identity.ts  poolSeal.ts  test-vectors.json  verification.test.ts  verification.ts
web/src/hooks/: useCeremony.test.ts  useCeremony.ts  useCeremonySecrets.test.ts  useCeremonySecrets.ts  useParticipant.ts
web/src/pages/: AdvancedPage.tsx  CachePage.tsx  CeremonyDetailPage.tsx  CreateCeremonyPage.tsx  HomePage.tsx  NotFoundPage.tsx  PoolDemoPage.tsx  PoolDetailPage.tsx  PoolsPage.tsx  RandomToolsPage.tsx  VerificationDetailPage.tsx  VerificationGuidePage.tsx  VerifyBeaconPage.tsx  VerifyPage.tsx
web/src/utils/: costs.ts  simulatedCompute.ts
