cabal-version:      3.0
name:               veritas
version:            0.1.0.0
synopsis:           Verifiable social randomness service
license:            MIT
build-type:         Simple

common common-deps
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    DataKinds
    TypeOperators
    DeriveAnyClass
  ghc-options:
    -Wall
    -Wno-unused-do-bind
  build-depends:
    , base              >= 4.18  && < 5
    , aeson             >= 2.1
    , bytestring        >= 0.11
    , text              >= 2.0
    , time              >= 1.12
    , uuid              >= 1.3
    , containers        >= 0.6
    , mtl               >= 2.3
    , transformers      >= 0.6
    , crypton           >= 0.34
    , memory            >= 0.18
    , servant           >= 0.20
    , servant-server    >= 0.20
    , warp              >= 3.3
    , postgresql-simple >= 0.7
    , resource-pool     >= 0.4
    , async             >= 2.2
    , http-conduit      >= 2.3
    , http-types        >= 0.12
    , network           >= 3.1
    , wai               >= 3.2
    , wai-extra         >= 3.1
    , vector            >= 0.13
    , katip             >= 0.8
    , directory          >= 1.3
    , unix              >= 2.7
    , warp-tls          >= 3.3
    , servant-openapi3  >= 2.0
    , openapi3          >= 3.2
    , lens              >= 5.0
    , insert-ordered-containers >= 0.2
    , wai-cors            >= 0.2
    , hsblst              >= 0.0.4

library
  import:           common-deps
  hs-source-dirs:   src
  exposed-modules:
    Veritas.Core.Types
    Veritas.Core.StateMachine
    Veritas.Core.Resolution
    Veritas.Core.Entropy
    Veritas.Core.AuditLog
    Veritas.Crypto.Hash
    Veritas.Crypto.Signatures
    Veritas.Crypto.CommitReveal
    Veritas.Crypto.VRF
    Veritas.Crypto.BLS
    Veritas.API.Types
    Veritas.API.Handlers
    Veritas.DB.Pool
    Veritas.DB.Queries
    Veritas.DB.Migrations
    Veritas.Workers.ExpiryChecker
    Veritas.Workers.AutoResolver
    Veritas.Workers.RevealDeadlineChecker
    Veritas.Workers.BeaconFetcher
    Veritas.External.Drand
    Veritas.Config
    Veritas.Logging
    Veritas.API.RateLimit

executable veritas
  import:           common-deps
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , veritas
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

executable gen-test-vectors
  import:           common-deps
  hs-source-dirs:   test
  main-is:          GenTestVectors.hs
  build-depends:
    , veritas
  ghc-options:
    -threaded

test-suite veritas-tests
  import:           common-deps
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , veritas
    , hspec             >= 2.11
    , QuickCheck        >= 2.14
    , hspec-discover    >= 2.11
  other-modules:
    TestHelpers
    Veritas.Core.StateMachineSpec
    Veritas.Core.ResolutionSpec
    Veritas.Core.AuditLogSpec
    Veritas.Core.RevealSpec
    Veritas.Crypto.HashSpec
    Veritas.Crypto.CommitRevealSpec
    Veritas.Crypto.BLSSpec
    Veritas.External.DrandSpec
    Properties.StateMachineProperties
    Properties.ResolutionProperties
    Properties.AuditLogProperties
    Properties.CommitRevealProperties
    Properties.StatisticalProperties
    Veritas.API.HandlersSpec
    Veritas.DB.QueriesSpec
    Veritas.Workers.BeaconFetcherSpec
    Integration.TestEnv
    Integration.DbHelpers
    Integration.CeremonyFixtures
    Integration.LifecycleSpec
    Integration.ErrorSpec
    Integration.AuditLogSpec
    Integration.StandaloneSpec
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
